[package]
name = "drawing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25"
rand = "0.8.5"
pixels = "0.15"
winit = "0.30"

[dev-dependencies]
eframe = "0.31"
iced = "0.13"
pixels = "0.15"
winit = "0.30"

[features]
egui-example = []
iced-example = []
pixels-example = []

[[example]]
name = "egui_seat_map"
path = "examples/egui_seat_map.rs"
required-features = ["egui-example"]

[[example]]
name = "iced_seat_map"
path = "examples/iced_seat_map.rs"
required-features = ["iced-example"]

[[example]]
name = "pixels_seat_map"
path = "examples/pixels_seat_map.rs"
required-features = ["pixels-example"]

[[example]]
name = "pixels_canvas"
path = "examples/pixels_canvas.rs"
required-features = ["pixels-example"]

